## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# INDEX
######################################################################

check_PROGRAMS += \
                pid_table_test \
                garbage_collector_test \
                index_test


index_test_SOURCES = index/index_test.cpp \
                     harness.cpp

pid_table_test_SOURCES = index/pid_table_test.cpp \
                         harness.cpp

garbage_collector_test_SOURCES = index/garbage_collector_test.cpp \
                                 harness.cpp