## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# INDEX
######################################################################

index_FILES = \
			  backend/index/index.cpp \
			  backend/index/index_factory.cpp \
			  backend/index/btree_index.cpp \
			  backend/index/bwtree.cpp \
			  backend/index/bwtree_index.cpp \
              backend/index/garbage_collector.cpp \
              backend/index/pid_table.cpp 
index_INCLUDES = \
				 -I$(srcdir)/backend/common    
