# Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# PARALLELISM
######################################################################

parallelism_FILES = \
			   backend/parallelism/AbstractParallelTaskRequest.cpp \
			   backend/parallelism/AbstractParallelTaskResponse.cpp

parallelism_INCLUDES = \
                  -I$(srcdir)/backend/parallelism